--- a/AppUI/AppUI.csproj
+++ b/AppUI/AppUI.csproj
@@ -612,6 +612,7 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="GameFinder.StoreHandlers.GOG" Version="4.9.0" />
+    <PackageReference Include="GameFinder.StoreHandlers.Steam" Version="4.9.0" />
     <PackageReference Include="GameFinder.StoreHandlers.Xbox" Version="4.9.0" />
     <PackageReference Include="ini-parser" Version="2.5.2" />
     <PackageReference Include="MegaApiClient">
